Les formulaires dans react

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,9 @@ h1.styled {
   background-color: rgb(24, 99, 160);
   color: white;
 }
+
+
+.carBorder{
+  border: 1px solid red;
+  padding: 50px;
+}
