la méthode memo de react

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,23 @@ h1.styled {
   color: red;
   text-transform: uppercase;
 }
+
+.red{
+  color: red;
+  font-weight: bold;
+}
+
+.blue{
+  color: blue;
+  font-weight: bold;
+}
+
+.green{
+  color: green;
+  font-weight: bold;
+}
+
+.purple{
+  color: purple;
+  font-weight: bold;
+}
