Les portails création d'un modal

--- a/src/index.css
+++ b/src/index.css
@@ -17,22 +17,49 @@ h1.styled {
   text-transform: uppercase;
 }
 
-.red{
+.red {
   color: red;
   font-weight: bold;
 }
 
-.blue{
+.blue {
   color: blue;
   font-weight: bold;
 }
 
-.green{
+.green {
   color: green;
   font-weight: bold;
 }
 
-.purple{
+.purple {
   color: purple;
   font-weight: bold;
+}
+
+.App {
+  height: 400px;
+  width: 200px;
+  background: lightblue;
+  position: relative;
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal > div {
+  width: 60%;
+  background-color: #fff;
+  padding: 20px;
+  min-height: 200px;
+  border-radius: 10px;
 }
