--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+h1 {
+  color: #282c34;
+  margin-bottom: 0;
+  margin-top: 80px;
+  font-size: 60px;
+  line-height: 65px;
+  font-weight: 700;
+}
+
+.active{
+  border-bottom: 4px solid #61DAFB;
+}
